 * Removed demos and benchmarks (SPARKC-398)
 * Refactor usages of SQLContext so that SparkSession is used instead (SPARKC-400)
 * Removed deprecated QueryRetryDelay configuration parameter (SPARKC-423)

2.0.0 M3
 * Includes all patches up to 1.6.2

2.0.0 M2
 * Includes all patches up to 1.6.1

2.0.0 M1
 * Added support for left outer joins with C* table (SPARKC-181)
 * Removed CassandraSqlContext and underscore based options (SPARKC-399)
 * Upgrade to Spark 2.0.0-preview (SPARKC-396)
    - Removed Twitter demo because there is no spark-streaming-twitter package available anymore
    - Removed Akka Actor demo becaues there is no support for such streams anymore
    - Bring back Kafka project and make it compile
    - Update several classes to use our Logging instead of Spark Logging because Spark Logging became private
    - Update few components and tests to make them work with Spark 2.0.0
    - Fix Spark SQL - temporarily
    - Update plugins and Scala version

********************************************************************************

1.6.3
 * Added SSL client authentication (SPARKC-359)

1.6.2
 * Fixed shading in artifacts published to Maven

1.6.1
 * Disallow TimeUUID Predicate Pushdown (SPARKC-405)
 * Avoid overflow on SplitSizeInMB param (SPARKC-413)
 * Fix conversion of LocalDate to Joda LocalDate (SPARKC-391)
 * Shade Guava to avoid conflict with outdated Guava in Spark (SPARKC-355)

1.6.0
 * SparkSql write supports TTL per row (SPARKC-345)
 * Make Repartition by Cassandra Replica Deterministic (SPARKC-278)
 * Improved performance by caching converters and Java driver codecs 
   (SPARKC-383)
 * Added support for driver.LocalDate (SPARKC-385)
 * Accept predicates with indexed partition columns (SPARKC-348)
 * Retry schema checks to avoid Java Driver debouncing (SPARKC-379)
 * Fix compatibility with Cassandra 2.1.X with Single Partitions/In queries 
   (SPARKC-376)
 * Use executeAsync while joining with C* table (SPARKC-233)