@@ -1,3 +1,4 @@
+ * CassandraRDD.coalesce() is pushed down to connector partition generator (SPARKC-161)
  * Removed demos and benchmarks (SPARKC-398)
  * Refactor usages of SQLContext so that SparkSession is used instead (SPARKC-400)
  * Removed deprecated QueryRetryDelay configuration parameter (SPARKC-423)
